syntax = "proto3";

option csharp_namespace = "VideoProto";

package video;

service VideoService {
  rpc UploadVideo (stream VideoChunk) returns (stream UploadResponse);
  rpc ConfigHandshake (VideoChunk) returns (ConfigContainer);
}

message VideoChunk {
  oneof data {
	  VideoMetadata vidMetadata = 1;
	  ConfigContainer config = 2;
  }
}

message VideoMetadata {
	bytes data = 1;       // Chunk data
	string fileName = 2;  // Name of the video file
	int32 chunkIndex = 3; // Chunk sequence index
	int32 totalChunks = 4;// Total number of chunks
}

message UploadResponse {
	enum status {
		OK = 0;
		ERROR = 1;
		WAIT = 2;
		FULL = 3;
		COMPLETE = 4;
		INIT = 5;
	}
	status currStatus = 1;
	VideoChunk currChunk = 3;
}

message ConfigContainer {
	int32 pThreads = 1;
	int32 cThreads = 2;
	int32 queueSize = 3;
}